[metadata]
name = negative-cache
description = Negative Cache
version = 0.1
license = Apache License 2.0
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/marceljahnke/negative-cache
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: Apache License 2.0

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.7
install_requires =
    torch >=1.8.0
    numpy >=1.20.3

[options.packages.find]
where = src